Publishing the react app:v2

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gh-pages-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tarique-ahmed.github.io/gh-pages-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
